--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=7.4.0"
+      "php": ">=7.4.0",
+      "ext-parallel": "*"
     },
     "autoload": {
         "psr-4": {
